Added some black cards

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -378,4 +378,65 @@
 \blackcard{Basis}{Was denkt\newline Angela Merkel\newline gerade?\newline \underl.}%
 \blackcard{Basis}{Auf was\newline verzichtest du\newline in der\newline Fastenzeit?\newline \underl.}
 
+\blackcard{Basis}{Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.}%
+\blackcard{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
+\blackcard{FSK16}{Eine Studie ergab, dass Teenager 50% weniger Sex hatten, nachdem man ihnen \underl zeigte.}
+
+\blackcard{Basis}{Papa, warum weint Mama? \underl.}%
+\blackcard{Basis}{\underl:\newline Von Kindern getestet,\newline von Müttern empfohlen.}%
+\blackcard{Basis}{Was wird mit dem Alter besser? \underl.}
+
+\blackcard{Basis}{Warum bin ich so klebrig? \underl.}%
+\blackcard{Basis}{\underl:\newline Gut bis zum letzten Tropfen.}%
+\blackcard{Basis}{Was hat Vin Diesel zum Mittag gegessen? \underl.}
+
+\blackcard{Basis}{Was hilft Angela Merkel zum Entspannen? \underl.}%
+\blackcard{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden?\newline \underl.}%
+\blackcard{Basis}{Ich habe \underl nie wirklich verstanden, bis ich \underl entdeckt hatte.}
+
+\blackcard{Basis}{Was würde Oma ekelhaft, aber doch seltsam bezaubernd finden? \underl.}%
+\blackcard{Basis}{Was gibt es tonnenweise im Himmel? \underl.}%
+\blackcard{Basis}{Was ist meine geheime Kraft? \underl.}
+
+\blackcard{Basis}{Als der Pharaoh seine Meinung nicht änderte, beschwörte Moses eine Plage von \underl herauf.}%
+\blackcard{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}%
+\blackcard{FSK16}{Was lässt mich unkontrolliert furzen? \underl.}
+
+\blackcard{Basis}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}%
+\blackcard{FSK16}{Sie sagten wir wären verrückt.\newline Sie sagten, wir könnten nicht \underl in \underl stecken.\newline Sie lagen falsch.}%
+\blackcard{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.}
+
+\blackcard{Basis}{Gleich auf RTL, die Weltmeisterschaft der \underl.}%
+\blackcard{Basis}{Nach den Erdbeben brachte Bill Gates \underl zu den Haitianern.}%
+\blackcard{Basis}{Zeitgleich zum Wettstreit der USA und Russland, die ersten Menschen auf den Mond zu bringen, finanzierte die Mexikanische Regierung die Erforschung von \underl.}
+
+\blackcard{Basis}{Bald zu sehen: \underl, das Musical.}%
+\blackcard{Basis}{Wie pflege ich meinen Beziehungsstatus?\newline Mit \underl.}%
+\blackcard{Basis}{Was werde ich aus der Zukunft mitbringen, um alle davon zu überzeugen, dass ich ein großartiger Magier bin? \underl.}
+
+\blackcard{Basis}{Was willst du nicht in deinem asiatischen Essen finden? \underl.}%
+\blackcard{Basis}{Was bringe ich aus der Türkei mit? \underl.}%
+\blackcard{Basis}{Man sagt, man könne im Knast \underl für 200 Zigaretten bekommen.}
+
+\blackcard{Basis}{Womit wirst du immer einen Partner beeindrucken können? \underl.}%
+\blackcard{Basis}{Was verstecken meine Eltern vor mir?}%
+\blackcard{FSK16}{Ich denke wärend des Sex gerne über \underl nach.}
+
+\blackcard{Böse}{Wofür ist Krieg gut?}%
+\blackcard{Basis}{In einer Welt verwüstet von \underl, dein einziger Trost ist \underl.}%
+\blackcard{Basis}{Wir stellen Xtreme Fußball vor! Es ist wie normales Fußball, nur mit \underl.}
+
+\blackcard{Basis}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
+\blackcard{Basis}{\underl. High Five, bro.}%
+\blackcard{Böse}{Weiße Menschen wie \underl.}
+
+\blackcard{Basis}{Ein Essen im Kerzenschein wäre nix ohne \underl.}%
+\blackcard{Basis}{Das neue Superhelden/Kumpan Duo! Es ist \underl und \underl.}%
+\blackcard{Basis}{Womit werden wir in 1000 Jahren bezahlen? Mit \underl.}
+
+\blackcard{}{}%
+\blackcard{}{}%
+\blackcard{}{}
+
+
 \end{document}
