Fixed error. You may not have a percent symbol in the card text.

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -380,7 +380,7 @@
 
 \blackcard{Basis}{Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.}%
 \blackcard{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
-\blackcard{FSK16}{Eine Studie ergab, dass Teenager 50% weniger Sex hatten, nachdem man ihnen \underl zeigte.}
+\blackcard{FSK16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}
 
 \blackcard{Basis}{Papa, warum weint Mama? \underl.}%
 \blackcard{Basis}{\underl:\newline Von Kindern getestet,\newline von Müttern empfohlen.}%
