Added and fixed some black cards. Next page: 26

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -392,7 +392,7 @@
 
 \blackcard{Basis}{Was hilft Angela Merkel zum Entspannen? \underl.}%
 \blackcard{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden?\newline \underl.}%
-\blackcard{Basis}{Ich habe \underl nie wirklich verstanden, bis ich \underl entdeckt hatte.}
+\blackcard{Basis}{Statt Kohle bring der Weihnachtsmann unartigen Kindern jetzt \underl.}
 
 \blackcard{Basis}{Was würde Oma ekelhaft, aber doch seltsam bezaubernd finden? \underl.}%
 \blackcard{Basis}{Was gibt es tonnenweise im Himmel? \underl.}%
@@ -408,7 +408,7 @@
 
 \blackcard{Basis}{Gleich auf RTL, die Weltmeisterschaft der \underl.}%
 \blackcard{Basis}{Nach den Erdbeben brachte Bill Gates \underl zu den Haitianern.}%
-\blackcard{Basis}{Zeitgleich zum Wettstreit der USA und Russland, die ersten Menschen auf den Mond zu bringen, finanzierte die Mexikanische Regierung die Erforschung von \underl.}
+\blackcard{Basis}{Zeitgleich zum "Wettlauf ins All" finanzierte die Mexikanische Regierung die Erforschung von \underl.}
 
 \blackcard{Basis}{Bald zu sehen: \underl, das Musical.}%
 \blackcard{Basis}{Wie pflege ich meinen Beziehungsstatus?\newline Mit \underl.}%
@@ -423,7 +423,7 @@
 \blackcard{FSK16}{Ich denke wärend des Sex gerne über \underl nach.}
 
 \blackcard{Böse}{Wofür ist Krieg gut?}%
-\blackcard{Basis}{In einer Welt verwüstet von \underl, dein einziger Trost ist \underl.}%
+\blackcard{Basis}{In einer Welt verwüstet von \underl, ist dein einziger Trost \underl.}%
 \blackcard{Basis}{Wir stellen Xtreme Fußball vor! Es ist wie normales Fußball, nur mit \underl.}
 
 \blackcard{Basis}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
@@ -433,5 +433,17 @@
 \blackcard{Basis}{Ein Essen im Kerzenschein wäre nix ohne \underl.}%
 \blackcard{Basis}{Das neue Superhelden/Kumpan Duo! Es ist \underl und \underl.}%
 \blackcard{Basis}{Womit werden wir in 1000 Jahren bezahlen? Mit \underl.}
+
+\blackcard{Basis}{Liebe Margret, Ich habe Probleme mit \underl.\newline Kannst du mir einen Rat geben?}%
+\blackcard{Basis}{Ich komme klar mit ein wenig Hilfe von \underl.}%
+\blackcard{Basis}{\underl ist eine heikle Lage die zu \underl führt.}
+
+\blackcard{Bais}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
+\blackcard{Eklig}{Für meinen nächsten Trick werde ich \underl aus \underl rausziehen.}%
+\blackcard{Bais}{\underl. So will ich sterben!}
+
+\blackcard{}{}%
+\blackcard{}{}%
+\blackcard{}{}
 
 \end{document}
