Resolved all unknown cards.

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -449,6 +449,44 @@
 \whitecard{Basis}{Die priviligierte Oberklasse.}%
 \whitecard{Basis}{Hoffnung.}%
 \whitecard{Basis}{Sein Shirt ausziehen.}
+
+\whitecard{Basis}{Ethnische Säuberung.}%
+\whitecard{Basis}{Fotzenfurz.}%
+\whitecard{Basis}{Snobismus.}
+
+\whitecard{Basis}{Winnie der Puh.}%
+\whitecard{Basis}{Frank-Walter Steinmeier.}%
+\whitecard{Basis}{Adolf Hitler.}
+
+\whitecard{Basis}{Vera Int-Veen}%
+\whitecard{Basis}{Robert Downey, Jr.}%
+\whitecard{Basis}{M. Night Shyamalan Story-Wendung.}
+
+\whitecard{Basis}{Thermodynamik.}%
+\whitecard{Basis}{Sigmar Gabriel.}%
+\whitecard{Basis}{Alibi-Minderheit.}
+
+\whitecard{Basis}{Anders Breivik.}%
+\whitecard{Basis}{Dibadibadu.}%
+\whitecard{Basis}{Michael \"Bully\" Herbig.}
+
+\whitecard{Basis}{Cookie Monster.}%
+\whitecard{Basis}{Ronald McDonald.}%
+\whitecard{Basis}{Marcus Iunius Brutus.}
+
+\whitecard{Drogen}{Amphetamin.}%
+\whitecard{Basis}{Zuhälter.}%
+\whitecard{Basis}{Amateurvideo von Heidi Klum, wie sie in eine Dose Ravioli heult.}
+
+\whitecard{Basis}{Schenkelschnorcheln.}%
+\whitecard{Basis}{Plutoniumpille.}%
+\whitecard{Basis}{Ein trübseliger Zoo-Löwe.}
+
+\whitecard{Basis}{Balzverhalten.}%
+\whitecard{Basis}{Pottwale.}%
+\whitecard{Basis}{Der Zorn des Putins.}
+
+\whitecard{Basis}{Der Versailler Vertrag.}%
 %
 % Here comes the black cards
 %
