Alle weissen Karten fertig.

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -468,7 +468,7 @@
 
 \whitecard{Basis}{Anders Breivik.}%
 \whitecard{Basis}{Dibadibadu.}%
-\whitecard{Basis}{Michael \"Bully\" Herbig.}
+\whitecard{Basis}{Michael "Bully" Herbig.}
 
 \whitecard{Basis}{Cookie Monster.}%
 \whitecard{Basis}{Ronald McDonald.}%
@@ -487,6 +487,161 @@
 \whitecard{Basis}{Der Zorn des Putins.}
 
 \whitecard{Basis}{Der Versailler Vertrag.}%
+\whitecard{Basis}{Kichern bei das Erwähnung von Hutus und Tutsis.}%
+\whitecard{Drogen}{Wirklich high werden.}
+
+\whitecard{Basis}{Natürliche Selektion.}%
+\whitecard{Basis}{Geschwätzige Antilope.}%
+\whitecard{Basis}{Mein Sexleben.}
+
+\whitecard{Basis}{Arnold Schwarzenegger.}%
+\whitecard{Basis}{So zu tun, als interessiere es einen.}%
+\whitecard{Basis}{Eine hässliche Fresse.}
+
+\whitecard{Basis}{Mein schwarzer Hintern.}%
+\whitecard{Basis}{BATMAN!!!}%
+\whitecard{Basis}{Obdachlose.}
+
+\whitecard{Basis}{Zentauren.}%
+\whitecard{Basis}{Eine salzige Überraschung.}%
+\whitecard{Basis}{72 Jungfrauen.}
+
+\whitecard{Basis}{Embrionale Stammzellen.}%
+\whitecard{FSK18}{Zensierte Bukkakke-Pornos.}%
+\whitecard{Basis}{Eine Eishacken Lobotomy.}
+
+\whitecard{Basis}{Echte zwischenmenschliche Beziehungen.}%
+\whitecard{Basis}{Munstrell bedingte Wutanfälle.}%
+\whitecard{FSK18}{Natursekt.}
+
+\whitecard{Eklig}{Ein endloser Strom aus Diarrhoe.}%
+\whitecard{Basis}{Schreckliche Laser-Haar-Entfernungs Unfälle.}%
+\whitecard{Böse}{Autokannibalismus.}
+
+\whitecard{Basis}{Ein Fötus.}%
+\whitecard{Basis}{Dem Sonnenntergang entgegenreiten.}%
+\whitecard{Basis}{Goblins.}
+
+\whitecard{Basis}{Das letzte noch lebende Bison essen.}%
+\whitecard{Basis}{Glänzende Dinge.}%
+\whitecard{Basis}{Reich sein.}
+
+\whitecard{Basis}{Lepra.}%
+\whitecard{Basis}{Weltfrieden.}%
+\whitecard{FSK16}{Penis-Finger.}
+
+\whitecard{Basis}{Kettensäge für die Hände.}%
+\whitecard{FSK16}{Penis-Atem.}%
+\whitecard{Basis}{Ein Ei legen.}
+
+\whitecard{Basis}{Die unendliche menschliche Dummheit.}%
+\whitecard{Basis}{Meine Genitalien.}%
+\whitecard{Basis}{Großmutter.}
+
+\whitecard{Basis}{Fleischfressende Bakterien.}%
+\whitecard{Basis}{Arme Menschen.}%
+\whitecard{FSK16}{50,000 Volt genau in die Nippel.}
+
+\whitecard{Basis}{Aktives Zuhören.}%
+\whitecard{Basis}{Der Übermensch.}%
+\whitecard{Basis}{Schlechte lebensverändernde Entscheidungen.}
+
+\whitecard{Basis}{Messdiener.}%
+\whitecard{FSK16}{Meine Vagina.}%
+\whitecard{Basis}{Pacman, unkontrollierbar am Sperma-Schlucken.}
+
+\whitecard{Basis}{Kleber schnüffeln.}%
+\whitecard{Basis}{Die Placenta.}%
+\whitecard{Böse}{Schwerbehinderte.}
+
+\whitecard{Basis}{Spontane Selbstentzündung.}%
+\whitecard{Basis}{Der Ku-Klux-Klan.}%
+\whitecard{FSK16}{Klitoris.}
+
+\whitecard{Basis}{Keine Hosen tragen.}%
+\whitecard{Basis}{Einvernehmlicher Sex.}%
+\whitecard{Basis}{Schwarze.}
+
+\whitecard{Basis}{Ein Eimer voller Fischköpfe.}%
+\whitecard{Basis}{Krankenpfleger.}%
+\whitecard{Basis}{Passiv-aggressive Post-It Zettel.}
+
+\whitecard{Basis}{Das Herz eines Kindes.}%
+\whitecard{Basis}{Krümel auf dem ganzen gottverdammten Teppich.}%
+\whitecard{Basis}{Dein merkwürdiger Bruder.}
+
+\whitecard{Basis}{Fett und dumm sein.}%
+\whitecard{Basis}{Heiraten, ein paar Kinder haben, ein bisschen Zeug kaufen, sich dann zur Ruhe setzen und sterben.}%
+\whitecard{Basis}{Sean Connery.}
+
+\whitecard{Basis}{Einen Rülpser erwarten und stattdessen auf den Boden kotzen.}%
+\whitecard{Basis}{Ehefrauliche Pflichten.}%
+\whitecard{Böse}{Eine Pyramide aus abgetrennten Köpfen.}
+
+\whitecard{Basis}{Genghis Khan.}%
+\whitecard{Basis}{Historische schwarze Kollegen.}%
+\whitecard{Böse}{Kreuzigung.}
+
+\whitecard{Basis}{Eine Mitgliedschaft in einem Fitness-Center.}%
+\whitecard{Basis}{Der Milchmann.}%
+\whitecard{Basis}{Friendly Fire.}
+
+\whitecard{Basis}{Die Leiden einer Frau.}%
+\whitecard{Böse}{AIDS.}%
+\whitecard{Basis}{George W. Bush.}
+
+\whitecard{Drogen}{8kg Heroin.}%
+\whitecard{FSK16}{Schlechtes Vorspiel.}%
+\whitecard{Basis}{Essbare Unterwäsche.}
+
+\whitecard{FSK18}{Meine Sammlung an High-Tech Sex Spielzeugen.}%
+\whitecard{Basis}{Die Macht.}%
+\whitecard{Basis}{Bienen?}
+
+\whitecard{Basis}{Ein bisschen gottverdammte Ruhe und Frieden.}%
+\whitecard{FSK18}{In einen Pool voll mit Tränen von Kindern wichsen.}%
+\whitecard{Basis}{Ein Microschwein mit einem Regenmantel und Gummiestiefeln.}
+
+\whitecard{FSK18}{Drei Schwänze auf einmal.}%
+\whitecard{FSK16}{Masturbation.}%
+\whitecard{Basis}{Tom Cruise.}
+
+\whitecard{Basis}{Ein ausgewogenes Frühstück.}%
+\whitecard{FSK18}{Analkette.}%
+\whitecard{Basis}{Alleine betrinken.}
+
+\whitecard{Basis}{Cards against Humanity.}%
+\whitecard{Böse}{Kleiderbügel Abtreibungen.}%
+\whitecard{Basis}{Benutzte Unterwäsche.}
+
+\whitecard{Basis}{Kuscheln.}%
+\whitecard{FSK18}{Ihr den Arsch abwischen.}%
+\whitecard{Basis}{Dominos\SymbReg Oreo Dessert Pizza.}
+
+\whitecard{Basis}{Ein scharfer Frühstücks-Burrito.}%
+\whitecard{Basis}{Morgan Freemans Stimme.}%
+\whitecard{Basis}{Ein Mann mittleren Alters in Rollschuhen.}
+
+\whitecard{Basis}{Gandhi.}%
+\whitecard{Basis}{Das Flötensolo aus "My Heart Will Go On".}%
+\whitecard{Basis}{Spektakuläre Bauchmuskeln.}
+
+\whitecard{Basis}{Keanu Reeves.}%
+\whitecard{Basis}{Kinder Schönheitswettbewerbe.}%
+\whitecard{Böse}{Kindesmissbrauch.}
+
+\whitecard{Basis}{Bill Nye dieser Wissenschafts-Heini.}%
+\whitecard{Basis}{Wissenschaft.}%
+\whitecard{Basis}{Ein Stamm von Kriegerinnen.}
+
+\whitecard{Basis}{Viagra\SymbReg.}%
+\whitecard{Basis}{Ihre Majestät, Königin Elizabeth II.}%
+\whitecard{Basis}{Der gesamte Mormonen-Gotteshaus-Chor.}
+
+\whitecard{Basis}{Die jährliche Massenhinrichtung.}%
+\whitecard{Basis}{Rückerstattungen.}%
+\whitecard{Basis}{Eine Erektion, die länger als vier Stunden dauert.}
+
 %
 % Here comes the black cards
 %
