Added all missing blackcards.

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -729,6 +729,32 @@
 
 \blackcard{Bais}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
 \blackcard{Eklig}{Für meinen nächsten Trick werde ich \underl aus \underl rausziehen.}%
-\blackcard{Bais}{\underl. So will ich sterben!}
+\blackcard{Basis}{\underl. So will ich sterben!}
+
+\blackcard{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
+\blackcard{Basis}{Was ist der beste Freund eines Mädchens? \underl.}%
+\blackcard{Basis}{Was ist Batmans geheime Vorliebe? \underl.}
+
+\blackcard{Basis}{Es tut mir Leid, Herr Professor, aber ich konnte meine Hausaufgaben nicht machen, weil \underl.}%
+\blackcard{Basis}{Ich trinke, um \underl zu vergessen.}%
+\blackcard{Basis}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl zusammenleben.}
+
+\blackcard{Basis}{Was hat meine letzte Beziehung beendet? \underl.}%
+\blackcard{Basis}{Was ist das für ein geräusch? \underl.}%
+\blackcard{Basis}{...Und der Preis für \underl geht an \underl.}
+
+\blackcard{Basis}{Alternative Medizin nutzt jetzt die heilende Energie von \underl.}%
+\blackcard{Basis}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%
+
+\blackcard{Basis}{Es ist eine Schande, das Kinder heutzutage alle mit \underl in Berührung kommen.}%
+\blackcard{Basis}{Hier ist die Kirche, da sind der Kirchturm, Öffne die Türen und da ist \underl.}%
+\blackcard{Basis}{Was ist das nächste Happy Meal\SymbReg Spielzeug? \underl.}
+\blackcard{Basis}{Vielleicht wurde sie damit geboren, aber vielleicht ist es auch \underl.}
+
+\blackcard{Basis}{Ich habe 99 Probleme, aber \underl ist keines davon.}%
+\blackcard{Basis}{Was ist das für ein Geruch? \underl.}%
+\blackcard{Basis}{Warum kann ich nachts nicht schlafen? \underl.}
+
+\blackcard{FSK16}{Wie verlor ich meine Jungfräulichkeit? \underl.}
 
 \end{document}
