--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -283,31 +283,31 @@
 \whitecard{Basis}{Ein Arschloch zu Kindern sein.}
 
 \whitecard{Eklig}{Vollgeschissene Windeln.}%
-\whitecard{FSK16}{Oma nackt sehen.}%
-\whitecard{Basis}{Velociraptor Angriffe.}
+\whitecard{FSK16}{Oma nackt\newline sehen.}%
+\whitecard{Basis}{Velociraptor\newline Angriffe.}
 
 \whitecard{Basis}{Swooping}%
 \whitecard{Basis}{Eine Errektion verstecken.}%
 \whitecard{FSK16}{Vollständige Nacktheit.}
 
-\whitecard{Basis}{Eregierte Nippel.}%
+\whitecard{Basis}{Eregierte\newline Nippel.}%
 \whitecard{Basis}{Eine Backpfeife.}%
 \whitecard{Basis}{Angela Merkels Oberarme.}
 
 \whitecard{Basis}{Herpes.}%
 \whitecard{Böse}{Ein robuster Mongoloider.}%
-\whitecard{Basis}{Beidseitige Bereitschaft zum nuklearen Gegenschlag.}
+\whitecard{Basis}{Beidseitige\newline Bereitschaft\newline zum nuklearen\newline Gegenschlag.}
 
-\whitecard{Basis}{Das jüngste Gericht.}%
+\whitecard{Basis}{Das jüngste\newline Gericht.}%
 \whitecard{Basis}{Das Ende der Straße.}%
 \whitecard{Basis}{Stalin.}
 
 \whitecard{FSK16}{Laktation.}%
-\whitecard{Basis}{Hurricane Katrina.}%
-\whitecard{Basis}{Die wahre Bedeutung von Weihnachten.}
+\whitecard{Basis}{Hurricane\newline Katrina.}%
+\whitecard{Basis}{Die wahre\newline Bedeutung von\newline Weihnachten.}
 
 \whitecard{Basis}{Selbsthass.}%
-\whitecard{Basis}{Gehirntumor.}%
+\whitecard{Basis}{Ein Gehirntumor.}%
 \whitecard{Böse}{Tote Babys.}
 
 \whitecard{Basis}{Hippiemusik.}%
@@ -316,33 +316,33 @@
 
 \whitecard{Basis}{Sido.}%
 \whitecard{Basis}{Gott.}%
-\whitecard{Basis}{Nerd-Spasti.}
+\whitecard{Basis}{Ein Nerd-Spasti.}
 
-\whitecard{FSK16}{Erotische Harry Potter Literatur.}%
+\whitecard{FSK16}{Erotische\newline Harry-Potter\newline Literatur.}%
 \whitecard{Böse}{Kinder mit Arsch-Krebs.}%
-\whitecard{Basis}{Holzfäller Phantasien.}
+\whitecard{Basis}{Holzfäller\newline Phantasien.}
 
-\whitecard{Basis}{Der amerikanische Traum.}%
+\whitecard{Basis}{Der\newline amerikanische\newline Traum.}%
 \whitecard{Basis}{Pubertät.}%
-\whitecard{Basis}{Süße, süße Vergeltug.}
+\whitecard{Basis}{Süße, süße\newline Vergeltug.}
 
 \whitecard{Basis}{Alten Leuten winken.}%
 \whitecard{Basis}{Die Wunder des Orients.}%
 \whitecard{Basis}{Oompa-Loompas.}
 
-\whitecard{Basis}{Athentische mexikanische Cuisine.}%
+\whitecard{Basis}{Authentische\newline mexikanische\newline Cuisine.}%
 \whitecard{Basis}{Pre-Teens.}%
 \whitecard{Basis}{Thomas the Train.}
 
-\whitecard{FSK18}{Fleshlight.}%
-\whitecard{FSK16}{Erektile Dysfunktion.}%
+\whitecard{FSK18}{Ein Fleshlight.}%
+\whitecard{FSK16}{Erektile\newline Dysfunktion.}%
 \whitecard{Basis}{Ein Arsch mit Ohren sein.}
 
-\whitecard{Eklig}{Günther Jauchs weicher, beschissener Körper.}%
+\whitecard{Eklig}{Günther Jauchs weicher,\newline beschissener\newline Körper.}%
 \whitecard{Basis}{Saxophon Solos.}%
 \whitecard{Basis}{Landminen.}
 
-\whitecard{FSK18}{Kein Sperma mehr übrig haben.}%
+\whitecard{FSK18}{Kein Sperma\newline mehr übrig\newline haben.}%
 \whitecard{Basis}{Zeit für mich.}%
 \whitecard{Basis}{Nickelback.}
 
@@ -354,27 +354,27 @@
 \whitecard{Basis}{Alkoholismus.}%
 \whitecard{Böse}{Schlechte Holocaust-Witze.}
 
-\whitecard{Basis}{Unangemessenes Jodeln.}%
+\whitecard{Basis}{Unangemes-\newline senes Jodeln.}%
 \whitecard{Basis}{Kriegsbedingte Amputationen.}%
-\whitecard{Basis}{Exakt was du vermuten würdest.}
+\whitecard{Basis}{Genau das,\newline was du\newline vermuten\newline würdest.}
 
-\whitecard{Basis}{Zeitreisen Paradox.}%
-\whitecard{Basis}{AXE Deo.}%
+\whitecard{Basis}{Zeitreisen\newline Paradox.}%
+\whitecard{Basis}{AXE\SymbReg Deo.}%
 \whitecard{Basis}{Das Leben eines Piraten.}
 
-\whitecard{Basis}{"Ich liebe dich" sagen.}%
+\whitecard{Basis}{``Ich liebe dich''\newline sagen.}%
 \whitecard{FSK16}{Eine erotische schwarze Frau.}%
-\whitecard{Basis}{Ein gottverdammter Zauberer sein.}
+\whitecard{Basis}{Ein\newline gottverdammter Zauberer\newline sein.}
 
 \whitecard{Basis}{Ein törichter Mord.}%
-\whitecard{Basis}{Ein Falke mit einer Mütze auf dem Kopf.}%
+\whitecard{Basis}{Ein Falke mit\newline einer Mütze\newline auf dem Kopf.}%
 \whitecard{Eklig}{Furzen und dann weglaufen.}
 
 \whitecard{Basis}{Ein chinesisches Gymnastikteam.}%
 \whitecard{Basis}{Hefe.}%
 \whitecard{Basis}{Bifi\SymbReg.}
 
-\whitecard{Basis}{An Dingen lecken um sie zu beanspruchen.}%
+\whitecard{Basis}{An Dingen\newline lecken, um sie\newline für sich selbst zu\newline beanspruchen.}%
 \whitecard{Basis}{Wikinger.}%
 \whitecard{Basis}{Der Ahoi-Brause Mann.}
 
@@ -382,7 +382,7 @@
 \whitecard{Basis}{Nicolas Cage.}%
 \whitecard{FSK16}{Ein kaputtes Kondom.}
 
-\whitecard{Basis}{Der unausweichliche Hitzetod des Universums.}%
+\whitecard{Basis}{Der unausweichliche\newline Hitzetod des\newline Universums.}%
 \whitecard{Basis}{CDU-Wähler.}%
 \whitecard{Basis}{William Shatner.}
 
@@ -391,67 +391,67 @@
 \whitecard{FSK18}{Gloryholes.}
 
 \whitecard{Basis}{Vaterkomplexe.}%
-\whitecard{Basis}{Ein Pantomime der ein Herzanfall hat.}%
+\whitecard{Basis}{Ein Pantomime,\newline der einen\newline Herzanfall hat.}%
 \whitecard{Basis}{Spießer.}
 
 \whitecard{Basis}{Ein Leben voller Traurigkeit.}%
 \whitecard{Basis}{Ein geschmackvolles Dekolleté.}%
-\whitecard{Basis}{In Problemen zu ertrinken.}
+\whitecard{Basis}{In Problemen ertrinken.}
 
 \whitecard{Basis}{Nazis.}%
 \whitecard{Böse}{Ein Kühlschrank voller Organe.}%
 \whitecard{Basis}{110\% geben}
 
 \whitecard{FSK18}{Anal-Sex.}%
-\whitecard{Eklig}{Ein Kind festhalten und es anfurzen.}%
-\whitecard{Basis}{Eine homoerotische Volleyball-Montage.}
+\whitecard{Eklig}{Ein Kind\newline festhalten und\newline es anfurzen.}%
+\whitecard{Basis}{Eine\newline homoerotische\newline Volleyball-\newline Montage.}
 
 \whitecard{Basis}{Welpen!}%
 \whitecard{Basis}{Natürliche männliche Verbesserungen.}%
 \whitecard{Basis}{Schwarze.}
 
-\whitecard{Basis}{Ein Kerzenhalter auf deine Feinde fallen lassen und das Seil hochklettern.}%
+\whitecard{Basis}{Einen\newline Kerzenhalter\newline auf deine\newline Feinde fallen\newline lassen und\newline am Seil\newline hochklettern.}%
 \whitecard{Basis}{Suppe, die zu heiß ist.}%
 \whitecard{FSK18}{Sex mit Patrick Steward.}
 
 \whitecard{Basis}{Hormon-Injektionen.}%
-\whitecard{Basis}{Die Hose runterlassen.}%
+\whitecard{Basis}{Die Hose\newline runterlassen.}%
 \whitecard{Basis}{Der Urknall.}
 
 \whitecard{Basis}{Den Antichrist gebären.}%
-\whitecard{Basis}{Darke und mysteriöse Mächte außerhalb deiner Kontrolle.}%
-\whitecard{FSK18}{Oralsex nicht zu erwiedern.}
+\whitecard{Basis}{Darke und\newline mysteriöse\newline Mächte,\newline die man nicht kontrollieren kann.}%
+\whitecard{FSK18}{Oralsex nicht\newline erwiedern.}
 
-\whitecard{Basis}{Heiße Menschen.}%
-\whitecard{FSK16}{Vorhaut.}%
-\whitecard{Basis}{Arschlose Burschen.}
+\whitecard{Basis}{Heiße\newline Menschen.}%
+\whitecard{FSK16}{Vorhäute.}%
+\whitecard{Basis}{Burschen ohne Ärsche.}
 
 \whitecard{Basis}{Das Wunder der Geburt.}%
-\whitecard{Basis}{Warten bis nach der Hochzeit.}%
-\whitecard{Eklig}{Zwei Kleinwüchsige, die in einen Eimer scheissen.}
+\whitecard{Basis}{Bis nach der\newline Hochzeit\newline warten.}%
+\whitecard{Eklig}{Zwei\newline Kleinwüchsige,\newline die in einen\newline Eimer\newline scheissen.}
 
 \whitecard{FSK18}{Ein schlechter Handjob.}%
-\whitecard{Basis}{In den Special Olympics schummeln.}%
+\whitecard{Basis}{Bei den\newline Special\newline Olympics\newline schummeln.}%
 \whitecard{Basis}{Ein Glassdach.}
 
 \whitecard{Basis}{Miley Cyrus mit 55.}%
 \whitecard{Basis}{Unser erster Chimpansen-Kanzler.}%
-\whitecard{Basis}{Anfangen zu Singen und zu Tanzen.}
+\whitecard{Basis}{Anfangen, zu Singen und zu Tanzen.}
 
-\whitecard{Eklig}{Ein Schwamm voller Katzenpisse.}%
+\whitecard{Eklig}{Ein Schwamm\newline voller\newline Katzenpisse.}%
 \whitecard{Basis}{U-Bahn.}%
 \whitecard{Basis}{Martin Luther King.}
 
 \whitecard{Basis}{Extrem enge Hosen.}%
-\whitecard{Basis}{Halb nackt auf dem Parkplatz einem McDonalds-Parkplatz aufwachen.}%
-\whitecard{Basis}{Der kalte, erfrischende Geschmack einer Pepsi\SymbReg}
+\whitecard{Basis}{Halb nackt\newline auf einem\newline McDonalds-\newline Parkplatz\newline aufwachen.}%
+\whitecard{Basis}{Der kalte,\newline erfrischende\newline Geschmack\newline einer Pepsi\SymbReg}
 
 \whitecard{Basis}{Die priviligierte Oberklasse.}%
 \whitecard{Basis}{Hoffnung.}%
-\whitecard{Basis}{Sein Shirt ausziehen.}
+\whitecard{Basis}{Sein Shirt\newline ausziehen.}
 
-\whitecard{Basis}{Ethnische Säuberung.}%
-\whitecard{Basis}{Fotzenfurz.}%
+\whitecard{Basis}{Ethnische\newline Säuberung.}%
+\whitecard{Basis}{Ein Fotzenfurz.}%
 \whitecard{Basis}{Snobismus.}
 
 \whitecard{Basis}{Winnie der Puh.}%
@@ -460,38 +460,38 @@
 
 \whitecard{Basis}{Vera Int-Veen}%
 \whitecard{Basis}{Robert Downey, Jr.}%
-\whitecard{Basis}{M. Night Shyamalan Story-Wendung.}
+\whitecard{Basis}{Eine M. Night\newline Shyamalan\newline Story-Wendung.}
 
 \whitecard{Basis}{Thermodynamik.}%
 \whitecard{Basis}{Sigmar Gabriel.}%
-\whitecard{Basis}{Alibi-Minderheit.}
+\whitecard{Basis}{Die\newline Alibi-Minderheit.}
 
 \whitecard{Basis}{Anders Breivik.}%
 \whitecard{Basis}{Dibadibadu.}%
-\whitecard{Basis}{Michael "Bully" Herbig.}
+\whitecard{Basis}{Michael \newline``Bully''\newline Herbig.}
 
-\whitecard{Basis}{Cookie Monster.}%
-\whitecard{Basis}{Ronald McDonald.}%
+\whitecard{Basis}{Das\newline Cookie Monster.}%
+\whitecard{Basis}{Ronald\newline McDonald.}%
 \whitecard{Basis}{Marcus Iunius Brutus.}
 
 \whitecard{Drogen}{Amphetamin.}%
 \whitecard{Basis}{Zuhälter.}%
-\whitecard{Basis}{Amateurvideo von Heidi Klum, wie sie in eine Dose Ravioli heult.}
+\whitecard{Basis}{Ein\newline Amateurvideo\newline von Heidi Klum,\newline wie sie in eine\newline Dose Ravioli\newline heult.}
 
-\whitecard{Basis}{Schenkelschnorcheln.}%
+\whitecard{Basis}{Schenkel-\newline schnorcheln.}%
 \whitecard{Basis}{Plutoniumpille.}%
 \whitecard{Basis}{Ein trübseliger Zoo-Löwe.}
 
 \whitecard{Basis}{Balzverhalten.}%
 \whitecard{Basis}{Pottwale.}%
-\whitecard{Basis}{Der Zorn des Putins.}
+\whitecard{Basis}{Der Zorn des\newline Putins.}
 
 \whitecard{Basis}{Der Versailler Vertrag.}%
-\whitecard{Basis}{Kichern bei das Erwähnung von Hutus und Tutsis.}%
-\whitecard{Drogen}{Wirklich high werden.}
+\whitecard{Basis}{Bei der\newline Erwähnung von\newline Hutus und\newline Tutsis\newline unkontrollierbar\newline kichern müssen.}%
+\whitecard{Drogen}{Mal so richtig\newline high werden.}
 
-\whitecard{Basis}{Natürliche Selektion.}%
-\whitecard{Basis}{Geschwätzige Antilope.}%
+\whitecard{Basis}{Natürliche\newline Selektion.}%
+\whitecard{Basis}{Eine\newline geschwätzige\newline Antilope.}%
 \whitecard{Basis}{Mein Sexleben.}
 
 \whitecard{Basis}{Arnold Schwarzenegger.}%
@@ -508,22 +508,22 @@
 
 \whitecard{Basis}{Embrionale Stammzellen.}%
 \whitecard{FSK18}{Zensierte Bukkakke-Pornos.}%
-\whitecard{Basis}{Eine Eishacken Lobotomy.}
+\whitecard{Basis}{Eine Eishacken-Lobotomie.}
 
-\whitecard{Basis}{Echte zwischenmenschliche Beziehungen.}%
-\whitecard{Basis}{Munstrell bedingte Wutanfälle.}%
+\whitecard{Basis}{Echte zwischenmenschliche\newline Beziehungen.}%
+\whitecard{Basis}{Munstrell\newline bedingte\newline Wutanfälle.}%
 \whitecard{FSK18}{Natursekt.}
 
-\whitecard{Eklig}{Ein endloser Strom aus Diarrhoe.}%
-\whitecard{Basis}{Schreckliche Laser-Haar-Entfernungs Unfälle.}%
-\whitecard{Böse}{Autokannibalismus.}
+\whitecard{Eklig}{Ein endloser\newline Strom aus\newline Diarrhoe.}%
+\whitecard{Basis}{Schreckliche\newline Laser-Haar-\newline Entfernungs-\newline Unfälle.}%
+\whitecard{Böse}{Auto-\newline kannibalismus.}
 
 \whitecard{Basis}{Ein Fötus.}%
-\whitecard{Basis}{Dem Sonnenntergang entgegenreiten.}%
+\whitecard{Basis}{Dem Sonnen-\newline untergang\newline entgegenreiten.}%
 \whitecard{Basis}{Goblins.}
 
 \whitecard{Basis}{Das letzte noch lebende Bison essen.}%
-\whitecard{Basis}{Glänzende Dinge.}%
+\whitecard{Basis}{Glänzende\newline Dinge.}%
 \whitecard{Basis}{Reich sein.}
 
 \whitecard{Basis}{Lepra.}%
@@ -535,16 +535,16 @@
 \whitecard{Basis}{Ein Ei legen.}
 
 \whitecard{Basis}{Die unendliche menschliche Dummheit.}%
-\whitecard{Basis}{Meine Genitalien.}%
+\whitecard{Basis}{Meine\newline Genitalien.}%
 \whitecard{Basis}{Großmutter.}
 
 \whitecard{Basis}{Fleischfressende Bakterien.}%
-\whitecard{Basis}{Arme Menschen.}%
-\whitecard{FSK16}{50,000 Volt genau in die Nippel.}
+\whitecard{Basis}{Arbeitslose.}%
+\whitecard{FSK16}{50,000 Volt\newline genau in die\newline Nippel.}
 
-\whitecard{Basis}{Aktives Zuhören.}%
-\whitecard{Basis}{Der Übermensch.}%
-\whitecard{Basis}{Schlechte lebensverändernde Entscheidungen.}
+\whitecard{Basis}{Aktives\newline Zuhören.}%
+\whitecard{Basis}{Der\newline Übermensch.}%
+\whitecard{Basis}{Schlechte, lebensverändernde Entscheidungen.}
 
 \whitecard{Basis}{Messdiener.}%
 \whitecard{FSK16}{Meine Vagina.}%
@@ -552,37 +552,37 @@
 
 \whitecard{Basis}{Kleber schnüffeln.}%
 \whitecard{Basis}{Die Placenta.}%
-\whitecard{Böse}{Schwerbehinderte.}
+\whitecard{Böse}{Schwer-\newline behinderte.}
 
 \whitecard{Basis}{Spontane Selbstentzündung.}%
-\whitecard{Basis}{Der Ku-Klux-Klan.}%
+\whitecard{Basis}{Der\newline Ku-Klux-Klan.}%
 \whitecard{FSK16}{Klitoris.}
 
-\whitecard{Basis}{Keine Hosen tragen.}%
-\whitecard{Basis}{Einvernehmlicher Sex.}%
+\whitecard{Basis}{Keine Hosen\newline tragen.}%
+\whitecard{Basis}{Ein-\newline vernehmlicher Sex.}%
 \whitecard{Basis}{Schwarze.}
 
 \whitecard{Basis}{Ein Eimer voller Fischköpfe.}%
 \whitecard{Basis}{Krankenpfleger.}%
-\whitecard{Basis}{Passiv-aggressive Post-It Zettel.}
+\whitecard{Basis}{Passiv-aggressive\newline Post-It Zettel.}
 
 \whitecard{Basis}{Das Herz eines Kindes.}%
-\whitecard{Basis}{Krümel auf dem ganzen gottverdammten Teppich.}%
-\whitecard{Basis}{Dein merkwürdiger Bruder.}
+\whitecard{Basis}{Krümel überall auf dem ganzen gottverdammten Teppich.}%
+\whitecard{Basis}{Dein\newline merkwürdiger\newline Bruder.}
 
 \whitecard{Basis}{Fett und dumm sein.}%
-\whitecard{Basis}{Heiraten, ein paar Kinder haben, ein bisschen Zeug kaufen, sich dann zur Ruhe setzen und sterben.}%
+\whitecard{Basis}{Heiraten, ein\newline paar Kinder\newline haben, ein\newline bisschen Kram\newline kaufen, sich dann\newline zur Ruhe setzen\newline und sterben.}%
 \whitecard{Basis}{Sean Connery.}
 
-\whitecard{Basis}{Einen Rülpser erwarten und stattdessen auf den Boden kotzen.}%
+\whitecard{Basis}{Einen Rülpser\newline erwarten und\newline stattdessen auf\newline den Boden\newline kotzen.}%
 \whitecard{Basis}{Ehefrauliche Pflichten.}%
-\whitecard{Böse}{Eine Pyramide aus abgetrennten Köpfen.}
+\whitecard{Böse}{Eine Pyramide\newline aus\newline abgetrennten\newline Köpfen.}
 
 \whitecard{Basis}{Genghis Khan.}%
-\whitecard{Basis}{Historische schwarze Kollegen.}%
+\whitecard{Basis}{Berühmte\newline schwarze\newline Kollegen.}%
 \whitecard{Böse}{Kreuzigung.}
 
-\whitecard{Basis}{Eine Mitgliedschaft in einem Fitness-Center.}%
+\whitecard{Basis}{Eine\newline Mitgliedschaft\newline in einem\newline Fitness-Center.}%
 \whitecard{Basis}{Der Milchmann.}%
 \whitecard{Basis}{Friendly Fire.}
 
@@ -591,55 +591,55 @@
 \whitecard{Basis}{George W. Bush.}
 
 \whitecard{Drogen}{8kg Heroin.}%
-\whitecard{FSK16}{Schlechtes Vorspiel.}%
-\whitecard{Basis}{Essbare Unterwäsche.}
+\whitecard{FSK16}{Schlechtes\newline Vorspiel.}%
+\whitecard{Basis}{Essbare\newline Unterwäsche.}
 
-\whitecard{FSK18}{Meine Sammlung an High-Tech Sex Spielzeugen.}%
+\whitecard{FSK18}{Meine\newline Sammlung an\newline High-Tech-Sex-newline Spielzeugen.}%
 \whitecard{Basis}{Die Macht.}%
 \whitecard{Basis}{Bienen?}
 
-\whitecard{Basis}{Ein bisschen gottverdammte Ruhe und Frieden.}%
-\whitecard{FSK18}{In einen Pool voll mit Tränen von Kindern wichsen.}%
-\whitecard{Basis}{Ein Microschwein mit einem Regenmantel und Gummiestiefeln.}
+\whitecard{Basis}{Ein bisschen\newline gottverdammte\newline Ruhe und\newline Frieden.}%
+\whitecard{FSK18}{In einen Pool\newline voller\newline Kindertränen\newline wichsen.}%
+\whitecard{Basis}{Ein\newline Mikroschwein\newline mit einem\newline Regenmantel\newline und\newline Gummiestiefeln.}
 
 \whitecard{FSK18}{Drei Schwänze auf einmal.}%
 \whitecard{FSK16}{Masturbation.}%
 \whitecard{Basis}{Tom Cruise.}
 
-\whitecard{Basis}{Ein ausgewogenes Frühstück.}%
+\whitecard{Basis}{Ein\newline ausgewogenes\newline Frühstück.}%
 \whitecard{FSK18}{Analkette.}%
-\whitecard{Basis}{Alleine betrinken.}
+\whitecard{Basis}{Sich alleine\newline betrinken.}
 
 \whitecard{Basis}{Cards against Humanity.}%
-\whitecard{Böse}{Kleiderbügel Abtreibungen.}%
-\whitecard{Basis}{Benutzte Unterwäsche.}
+\whitecard{Böse}{Abtreibungen\newline mit\newline Kleiderbügeln.}%
+\whitecard{Basis}{Benutzte\newline Unterhosen.}
 
 \whitecard{Basis}{Kuscheln.}%
 \whitecard{FSK18}{Ihr den Arsch abwischen.}%
 \whitecard{Basis}{Dominos\SymbReg Oreo Dessert Pizza.}
 
 \whitecard{Basis}{Ein scharfer Frühstücks-Burrito.}%
-\whitecard{Basis}{Morgan Freemans Stimme.}%
-\whitecard{Basis}{Ein Mann mittleren Alters in Rollschuhen.}
+\whitecard{Basis}{Morgan\newline Freemans\newline Stimme.}%
+\whitecard{Basis}{Ein Mann\newline mittleren\newline Alters in\newline Rollschuhen.}
 
 \whitecard{Basis}{Gandhi.}%
 \whitecard{Basis}{Das Flötensolo aus "My Heart Will Go On".}%
 \whitecard{Basis}{Spektakuläre Bauchmuskeln.}
 
 \whitecard{Basis}{Keanu Reeves.}%
-\whitecard{Basis}{Kinder Schönheitswettbewerbe.}%
-\whitecard{Böse}{Kindesmissbrauch.}
+\whitecard{Basis}{Kinder-Schönheits-\newline wettbewerbe.}%
+\whitecard{Böse}{Kindes-\newline missbrauch.}
 
-\whitecard{Basis}{Bill Nye dieser Wissenschafts-Heini.}%
+\whitecard{Basis}{Bill Nye,\newline dieser Wissenschafts-Heini.}%
 \whitecard{Basis}{Wissenschaft.}%
 \whitecard{Basis}{Ein Stamm von Kriegerinnen.}
 
 \whitecard{Basis}{Viagra\SymbReg.}%
-\whitecard{Basis}{Ihre Majestät, Königin Elizabeth II.}%
-\whitecard{Basis}{Der gesamte Mormonen-Gotteshaus-Chor.}
+\whitecard{Basis}{Ihre Majestät,\newline Königin\newline Elizabeth II.}%
+\whitecard{Basis}{Der gesamte Chor aus einem Mormonen-Gotteshaus.}
 
 \whitecard{Basis}{Die jährliche Massenhinrichtung.}%
-\whitecard{Basis}{Rückerstattungen.}%
+\whitecard{Basis}{Rück-\newline erstattungen.}%
 \whitecard{Basis}{Eine Erektion, die länger als vier Stunden dauert.}
 
 %
@@ -695,9 +695,9 @@
 \blackcard{FSK16}{Sie sagten wir wären verrückt.\newline Sie sagten, wir könnten nicht \underl in \underl stecken.\newline Sie lagen falsch.}%
 \blackcard{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.}
 
-\blackcard{Basis}{Gleich auf RTL, die Weltmeisterschaft der \underl.}%
-\blackcard{Basis}{Nach den Erdbeben brachte Bill Gates \underl zu den Haitianern.}%
-\blackcard{Basis}{Zeitgleich zum "Wettlauf ins All" finanzierte die Mexikanische Regierung die Erforschung von \underl.}
+\blackcard{Basis}{Gleich auf RTL:\newline die Weltmeisterschaft der \underl.}%
+\blackcard{Basis}{Nach den\newline Erdbeben\newline brachte Bill\newline Gates \underl zu\newline den Haitianern.}%
+\blackcard{Basis}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, finanzierte die Mexikanische Regierung die Erforschung von \underl.}
 
 \blackcard{Basis}{Bald zu sehen: \underl, das Musical.}%
 \blackcard{Basis}{Wie pflege ich meinen Beziehungsstatus?\newline Mit \underl.}%
