--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -1,54 +1,15 @@
 \documentclass[a4paper,parskip]{scrartcl}
 \usepackage[top=10mm,bottom=10mm,left=15mm,right=15mm]{geometry}
 \usepackage{tikz}
-%\usepackage{pifont}
-%\usepackage{anttor}
 \usepackage{arev}
 \usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
 \begin{document}
-\pgfmathsetmacro{\cardwidth}{6.2}
-\pgfmathsetmacro{\cardheight}{8.8}
-\pgfmathsetmacro{\stripwidth}{0.6}
-\pgfmathsetmacro{\strippadding}{0.1}
-\pgfmathsetmacro{\textpadding}{0.1}
-\pgfmathsetmacro{\ruleheight}{0.15}
-\pgfmathsetmacro{\cardsymbolwidth}{0.25}
-\pgfmathsetmacro{\cardsymbolheight}{0.4}
-
 \setlength{\baselineskip}{16pt}
 \def\SymbReg{\textsuperscript{\textregistered}}
 \setlength{\parskip}{0pt}
 
-\newcommand{\titleleft}{CARDS AGAINST HUMANITY}
-\newcommand{\underl}{\rule{2cm}{.5pt}}
-
-\newcommand{\blackcard}[2] {\begin{tikzpicture}%
-    \draw (0,0) rectangle (\cardwidth cm,\cardheight cm);
-        \fill[black] (0, 0) rectangle (\stripwidth,\cardheight) node[rotate=90,above left,white,font=\large] {
-            \titleleft
-        };
-        \node[fill=black, draw=white, minimum height = \cardsymbolwidth cm, minimum width = \cardsymbolheight cm, anchor=east, rotate=15] at (4*\stripwidth/5, \stripwidth/2) { } ;
-        \node[fill=white, draw=black, minimum height = \cardsymbolwidth cm, minimum width = \cardsymbolheight cm, anchor=east, rotate=0] at (4*\stripwidth/5, \stripwidth/2) { } ;
-        \node[fill=white, draw=black, minimum height = \cardsymbolwidth cm, minimum width = \cardsymbolheight cm, anchor=east, rotate=-20] at (4*\stripwidth/5, \stripwidth/2) { } ;
-
-        \node[text width=(\cardwidth-\strippadding-\stripwidth-2*\textpadding-0.3)*1cm,below right, anchor=west] at (\strippadding+\stripwidth+\textpadding,\cardheight*1/2-\textpadding) {
-            {\LARGE #2\par}
-        };
-        \node[anchor=south east] at (\cardwidth, 0) {\scriptsize #1};
-\end{tikzpicture}}
-\newcommand{\whitecard}[2] {\begin{tikzpicture}%
-    \draw (0,0) rectangle (\cardwidth cm,\cardheight cm);
-        \draw[gray] (0,0) rectangle (0\stripwidth,\cardheight0) node[rotate=90,above left,black,font=\large] {\titleleft};
-        \node[fill=black, draw=black, minimum height = \cardsymbolwidth cm, minimum width = \cardsymbolheight cm, anchor=east, rotate=15] at (4*\stripwidth/5, \stripwidth/2) { } ;
-        \node[fill=white, draw=black, minimum height = \cardsymbolwidth cm, minimum width = \cardsymbolheight cm, anchor=east, rotate=0] at (4*\stripwidth/5, \stripwidth/2) { } ;
-        \node[fill=white, draw=black, minimum height = \cardsymbolwidth cm, minimum width = \cardsymbolheight cm, anchor=east, rotate=-20] at (4*\stripwidth/5, \stripwidth/2) { } ;
-
-        \node[text width=(\cardwidth-\strippadding-\stripwidth-2*\textpadding-0.3)*1cm,below right, anchor=west] at (\strippadding+\stripwidth+\textpadding,\cardheight*2/3-\textpadding) {
-            {\LARGE #2\par}
-        };
-        \node[anchor=south east] at (\cardwidth, 0) {\scriptsize #1};
-\end{tikzpicture}}
+\include{commands}
 
 \whitecard{Basis}{In Flammen \newline stehen.}%
 \whitecard{Basis}{Rassismus.}%
@@ -647,114 +608,114 @@
 %
 
 
-\blackcard{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
-\blackcard{Basis}{Warum tut mir alles weh? \underl.}%
-\blackcard{Basis}{Was hat nie verfehlt,\newline eine Party\newline zu beleben? \underl.}
+\blackcard{1}{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
+\blackcard{1}{Basis}{Warum tut mir alles weh?}%
+\blackcard{1}{Basis}{Was hat nie verfehlt,\newline eine Party\newline zu beleben?}
 
-\blackcard{Basis}{\underl + \underl\newline = \underl.}%
-\blackcard{Drogen}{Was ist\newline meine\newline Anti-Droge? \underl.}%
-\blackcard{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie? \underl.}
+\blackcard{1}{Basis}{\underl + \underl\newline = \underl.}%
+\blackcard{1}{Drogen}{Was ist\newline meine\newline Anti-Droge?}%
+\blackcard{1}{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie?}
 
-\blackcard{Drogen}{Als einen Acid-trip hatte, wurde \underl zu \underl.}%
-\blackcard{Basis}{Wenn ich ein\newline Milliadär wäre,\newline um wem zu gedenken würde ich eine Statue bauen? \underl.}%
-\blackcard{Basis}{Wenn ich König von Deutschland wär, würde ich das Ministerium für \underl ins Leben rufen.}
+\blackcard{1}{Drogen}{Als einen Acid-trip hatte, wurde \underl zu \underl.}%
+\blackcard{1}{Basis}{Wenn ich ein\newline Milliadär wäre,\newline um wem zu gedenken würde ich eine Statue bauen?}%
+\blackcard{1}{Basis}{Wenn ich König von Deutschland wär, würde ich das Ministerium für \underl ins Leben rufen.}
 
-\blackcard{Basic}{Dreamworks präsentiert: "\underl,\newline die Geschichte von \underl."}%
-\blackcard{Basis}{Was ist die neue Modediät? \underl.}%
-\blackcard{Basis}{Das Naturkundemuseum stellt jetzt auch \underl aus.}
+\blackcard{1}{Basic}{Dreamworks präsentiert: "\underl,\newline die Geschichte von \underl."}%
+\blackcard{1}{Basis}{Was ist die neue Modediät?}%
+\blackcard{1}{Basis}{Das Naturkundemuseum stellt jetzt auch \underl aus.}
 
-\blackcard{FSK18}{Fun Tip! Wenn dein Mann dich um einen\newline Blowjob bittet,\newline überrasche ihn stattdessen mit \underl.}%
-\blackcard{Basis}{Was denkt\newline Angela Merkel\newline gerade?\newline \underl.}%
-\blackcard{Basis}{Auf was\newline verzichtest du\newline in der\newline Fastenzeit?\newline \underl.}
+\blackcard{1}{FSK18}{Fun Tip! Wenn dein Mann dich um einen\newline Blowjob bittet,\newline überrasche ihn stattdessen mit \underl.}%
+\blackcard{1}{Basis}{Was denkt\newline Angela Merkel\newline gerade?\newline \underl.}%
+\blackcard{1}{Basis}{Auf was\newline verzichtest du\newline in der\newline Fastenzeit?\newline \underl.}
 
-\blackcard{Basis}{Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.}%
-\blackcard{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
-\blackcard{FSK16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}
+\blackcard{1}{Basis}{Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.}%
+\blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
+\blackcard{1}{FSK16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}
 
-\blackcard{Basis}{Papa, warum weint Mama? \underl.}%
-\blackcard{Basis}{\underl:\newline Von Kindern getestet,\newline von Müttern empfohlen.}%
-\blackcard{Basis}{Was wird mit dem Alter besser? \underl.}
+\blackcard{1}{Basis}{Papa, warum weint Mama?}%
+\blackcard{1}{Basis}{\underl:\newline Von Kindern getestet,\newline von Müttern empfohlen.}%
+\blackcard{1}{Basis}{Was wird mit dem Alter besser?}
 
-\blackcard{Basis}{Warum bin ich so klebrig? \underl.}%
-\blackcard{Basis}{\underl:\newline Gut bis zum letzten Tropfen.}%
-\blackcard{Basis}{Was hat Vin Diesel zum Mittag gegessen? \underl.}
+\blackcard{1}{Basis}{Warum bin ich so klebrig?}%
+\blackcard{1}{Basis}{\underl:\newline Gut bis zum letzten Tropfen.}%
+\blackcard{1}{Basis}{Was hat Vin Diesel zum Mittag gegessen?}
 
-\blackcard{Basis}{Was hilft Angela Merkel zum Entspannen? \underl.}%
-\blackcard{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden?\newline \underl.}%
-\blackcard{Basis}{Statt Kohle bring der Weihnachtsmann unartigen Kindern jetzt \underl.}
+\blackcard{1}{Basis}{Was hilft Angela Merkel zum Entspannen?}%
+\blackcard{1}{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden?\newline \underl.}%
+\blackcard{1}{Basis}{Statt Kohle bring der Weihnachtsmann unartigen Kindern jetzt \underl.}
 
-\blackcard{Basis}{Was würde Oma ekelhaft, aber doch seltsam bezaubernd finden? \underl.}%
-\blackcard{Basis}{Was gibt es tonnenweise im Himmel? \underl.}%
-\blackcard{Basis}{Was ist meine geheime Kraft? \underl.}
+\blackcard{1}{Basis}{Was würde Oma ekelhaft, aber doch seltsam bezaubernd finden?}%
+\blackcard{1}{Basis}{Was gibt es tonnenweise im Himmel?}%
+\blackcard{1}{Basis}{Was ist meine geheime Kraft?}
 
-\blackcard{Basis}{Als der Pharaoh seine Meinung nicht änderte, beschwörte Moses eine Plage von \underl herauf.}%
-\blackcard{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}%
-\blackcard{FSK16}{Was lässt mich unkontrolliert furzen? \underl.}
+\blackcard{1}{Basis}{Als der Pharaoh seine Meinung nicht änderte, beschwörte Moses eine Plage von \underl herauf.}%
+\blackcard{1}{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}%
+\blackcard{1}{FSK16}{Was lässt mich unkontrolliert furzen?}
 
-\blackcard{Basis}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}%
-\blackcard{FSK16}{Sie sagten wir wären verrückt.\newline Sie sagten, wir könnten nicht \underl in \underl stecken.\newline Sie lagen falsch.}%
-\blackcard{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.}
+\blackcard{1}{Basis}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}%
+\blackcard{1}{FSK16}{Sie sagten wir wären verrückt.\newline Sie sagten, wir könnten nicht \underl in \underl stecken.\newline Sie lagen falsch.}%
+\blackcard{1}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.}
 
-\blackcard{Basis}{Gleich auf RTL:\newline die Weltmeisterschaft der \underl.}%
-\blackcard{Basis}{Nach den\newline Erdbeben\newline brachte Bill\newline Gates \underl zu\newline den Haitianern.}%
-\blackcard{Basis}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, finanzierte die Mexikanische Regierung die Erforschung von \underl.}
+\blackcard{1}{Basis}{Gleich auf RTL:\newline die Weltmeisterschaft der \underl.}%
+\blackcard{1}{Basis}{Nach den\newline Erdbeben\newline brachte Bill\newline Gates \underl zu\newline den Haitianern.}%
+\blackcard{1}{Basis}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, finanzierte die Mexikanische Regierung die Erforschung von \underl.}
 
-\blackcard{Basis}{Bald zu sehen: \underl, das Musical.}%
-\blackcard{Basis}{Wie pflege ich meinen Beziehungsstatus?\newline Mit \underl.}%
-\blackcard{Basis}{Was werde ich aus der Zukunft mitbringen, um alle davon zu überzeugen, dass ich ein großartiger Magier bin? \underl.}
+\blackcard{1}{Basis}{Bald zu sehen: \underl, das Musical.}%
+\blackcard{1}{Basis}{Wie pflege ich meinen Beziehungsstatus?\newline Mit \underl.}%
+\blackcard{1}{Basis}{Was werde ich aus der Zukunft mitbringen, um alle davon zu überzeugen, dass ich ein großartiger Magier bin?}
 
-\blackcard{Basis}{Was willst du nicht in deinem asiatischen Essen finden? \underl.}%
-\blackcard{Basis}{Was bringe ich aus der Türkei mit? \underl.}%
-\blackcard{Basis}{Man sagt, man könne im Knast \underl für 200 Zigaretten bekommen.}
+\blackcard{1}{Basis}{Was willst du nicht in deinem asiatischen Essen finden?}%
+\blackcard{1}{Basis}{Was bringe ich aus der Türkei mit?}%
+\blackcard{1}{Basis}{Man sagt, man könne im Knast \underl für 200 Zigaretten bekommen.}
 
-\blackcard{Basis}{Womit wirst du immer einen Partner beeindrucken können? \underl.}%
-\blackcard{Basis}{Was verstecken meine Eltern vor mir?}%
-\blackcard{FSK16}{Ich denke wärend des Sex gerne über \underl nach.}
+\blackcard{1}{Basis}{Womit wirst du immer einen Partner beeindrucken können?}%
+\blackcard{1}{Basis}{Was verstecken meine Eltern vor mir?}%
+\blackcard{1}{FSK16}{Ich denke wärend des Sex gerne über \underl nach.}
 
-\blackcard{Böse}{Wofür ist Krieg gut?}%
-\blackcard{Basis}{In einer Welt verwüstet von \underl, ist dein einziger Trost \underl.}%
-\blackcard{Basis}{Wir stellen Xtreme Fußball vor! Es ist wie normales Fußball, nur mit \underl.}
+\blackcard{1}{Böse}{Wofür ist Krieg gut?}%
+\blackcard{1}{Basis}{In einer Welt verwüstet von \underl, ist dein einziger Trost \underl.}%
+\blackcard{1}{Basis}{Wir stellen Xtreme Fußball vor! Es ist wie normales Fußball, nur mit \underl.}
 
-\blackcard{Basis}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
-\blackcard{Basis}{\underl. High Five, bro.}%
-\blackcard{Böse}{Weiße Menschen wie \underl.}
+\blackcard{1}{Basis}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
+\blackcard{1}{Basis}{\underl. High Five, bro.}%
+\blackcard{1}{Böse}{Weiße Menschen wie \underl.}
 
-\blackcard{Basis}{Ein Essen im Kerzenschein wäre nix ohne \underl.}%
-\blackcard{Basis}{Das neue Superhelden/Kumpan Duo! Es ist \underl und \underl.}%
-\blackcard{Basis}{Womit werden wir in 1000 Jahren bezahlen? Mit \underl.}
+\blackcard{1}{Basis}{Ein Essen im Kerzenschein wäre nix ohne \underl.}%
+\blackcard{1}{Basis}{Das neue Superhelden/Kumpan Duo! Es ist \underl und \underl.}%
+\blackcard{1}{Basis}{Womit werden wir in 1000 Jahren bezahlen? Mit \underl.}
 
-\blackcard{Basis}{Liebe Margret, Ich habe Probleme mit \underl.\newline Kannst du mir einen Rat geben?}%
-\blackcard{Basis}{Ich komme klar mit ein wenig Hilfe von \underl.}%
-\blackcard{Basis}{\underl ist eine heikle Lage die zu \underl führt.}
+\blackcard{1}{Basis}{Liebe Margret, Ich habe Probleme mit \underl.\newline Kannst du mir einen Rat geben?}%
+\blackcard{1}{Basis}{Ich komme klar mit ein wenig Hilfe von \underl.}%
+\blackcard{1}{Basis}{\underl ist eine heikle Lage die zu \underl führt.}
 
-\blackcard{Bais}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
-\blackcard{Eklig}{Für meinen nächsten Trick werde ich \underl aus \underl rausziehen.}%
-\blackcard{Basis}{\underl. So will ich sterben!}
+\blackcard{1}{Bais}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
+\blackcard{1}{Eklig}{Für meinen nächsten Trick werde ich \underl aus \underl rausziehen.}%
+\blackcard{1}{Basis}{\underl. So will ich sterben!}
 
-\blackcard{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
-\blackcard{Basis}{Was ist der beste Freund eines Mädchens? \underl.}%
-\blackcard{Basis}{Was ist Batmans geheime Vorliebe? \underl.}
+\blackcard{1}{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
+\blackcard{1}{Basis}{Was ist der beste Freund eines Mädchens?}%
+\blackcard{1}{Basis}{Was ist Batmans geheime Vorliebe?}
 
-\blackcard{Basis}{Es tut mir Leid, Herr Professor, aber ich konnte meine Hausaufgaben nicht machen, weil \underl.}%
-\blackcard{Basis}{Ich trinke, um \underl zu vergessen.}%
-\blackcard{Basis}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl zusammenleben.}
+\blackcard{1}{Basis}{Es tut mir Leid, Herr Professor, aber ich konnte meine Hausaufgaben nicht machen, weil \underl.}%
+\blackcard{1}{Basis}{Ich trinke, um \underl zu vergessen.}%
+\blackcard{1}{Basis}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl zusammenleben.}
 
-\blackcard{Basis}{Was hat meine letzte Beziehung beendet? \underl.}%
-\blackcard{Basis}{Was ist das für ein geräusch? \underl.}%
-\blackcard{Basis}{...Und der Preis für \underl geht an \underl.}
+\blackcard{1}{Basis}{Was hat meine letzte Beziehung beendet?}%
+\blackcard{1}{Basis}{Was ist das für ein geräusch?}%
+\blackcard{1}{Basis}{...Und der Preis für \underl geht an \underl.}
 
-\blackcard{Basis}{Alternative Medizin nutzt jetzt die heilende Energie von \underl.}%
-\blackcard{Basis}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%
+\blackcard{1}{Basis}{Alternative Medizin nutzt jetzt die heilende Energie von \underl.}%
+\blackcard{1}{Basis}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%
 
-\blackcard{Basis}{Es ist eine Schande, das Kinder heutzutage alle mit \underl in Berührung kommen.}%
-\blackcard{Basis}{Hier ist die Kirche, da sind der Kirchturm, Öffne die Türen und da ist \underl.}%
-\blackcard{Basis}{Was ist das nächste Happy Meal\SymbReg Spielzeug? \underl.}
-\blackcard{Basis}{Vielleicht wurde sie damit geboren, aber vielleicht ist es auch \underl.}
+\blackcard{1}{Basis}{Es ist eine Schande, das Kinder heutzutage alle mit \underl in Berührung kommen.}%
+\blackcard{1}{Basis}{Hier ist die Kirche, da sind der Kirchturm, Öffne die Türen und da ist \underl.}%
+\blackcard{1}{Basis}{Was ist das nächste Happy Meal\SymbReg Spielzeug?}
+\blackcard{1}{Basis}{Vielleicht wurde sie damit geboren, aber vielleicht ist es auch \underl.}
 
-\blackcard{Basis}{Ich habe 99 Probleme, aber \underl ist keines davon.}%
-\blackcard{Basis}{Was ist das für ein Geruch? \underl.}%
-\blackcard{Basis}{Warum kann ich nachts nicht schlafen? \underl.}
+\blackcard{1}{Basis}{Ich habe 99 Probleme, aber \underl ist keines davon.}%
+\blackcard{1}{Basis}{Was ist das für ein Geruch?}%
+\blackcard{1}{Basis}{Warum kann ich nachts nicht schlafen?}
 
-\blackcard{FSK16}{Wie verlor ich meine Jungfräulichkeit? \underl.}
+\blackcard{1}{FSK16}{Wie verlor ich meine Jungfräulichkeit?}
 
 \end{document}
